fix(ui): Fix width of transactions view on mobile

--- a/interface/src/styles/index.scss
+++ b/interface/src/styles/index.scss
@@ -15,6 +15,7 @@ body {
     display: flex;
     position: relative;
     flex: 1;
+    max-width: 100vw;
   }
 
   // When a modal is open, don't let the window scroll. Scroll containers in the
